--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,4 +14,4 @@ phases:
       - echo Build completed on `date`
       - mvn clean validate 
 artifacts:
-  files: s3://aws-codestar-us-east-2-855632519870-java-project-pipe/java-project-Pipelin/
+  files: arn:aws:codeartifact:us-east-2:855632519870:repository/java/javaproject
