--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,4 +14,4 @@ phases:
       - echo Build completed on `date`
       - mvn clean validate 
 artifacts:
-  files: imagedefinitions.json
+  files: java
