--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,4 +14,5 @@ phases:
       - echo Build completed on `date`
       - mvn clean validate 
 artifacts:
-  files: arn:aws:codeartifact:us-east-2:855632519870:repository/java/javaproject
+  files: 
+    - target/vprofile.jar
