--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,4 +12,4 @@ phases:
   post_build:
     commands:
       - echo Build completed on `date`
-      - mvn clean validate compile
+      - mvn clean validate compile test
