--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,3 +13,6 @@ phases:
     commands:
       - echo Build completed on `date`
       - mvn clean validate compile test
+artifacts:
+  files:
+    - target/
